fix(main): adjustment overflow in main with height and fixed

--- a/public/global.css
+++ b/public/global.css
@@ -50,6 +50,7 @@ main h1 {
   color: #ff3e00;
   font-size: 4em;
   font-weight: 100;
+  margin-top: 0;
   outline: none;
   text-transform: uppercase;
 }
